Fix audio not playing on mobile browsers!

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ a { color: black; }
 	border: 1px solid black;
 	margin: 1% auto;
 	display: block;
+
+	/* disable double tap zoom */
+	touch-action: manipulation;
 }
 
 footer {
